; ModuleID = '/home/carl/AnghaBench/linux/drivers/regulator/extr_tps65090-regulator.c_tps65090_reg_set_overcurrent_wait.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/regulator/extr_tps65090-regulator.c_tps65090_reg_set_overcurrent_wait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tps65090_regulator = type { i32 }
%struct.regulator_dev = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@MAX_OVERCURRENT_WAIT = common dso_local global i32 0, align 4
@CTRL_WT_BIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Error updating overcurrent wait %#x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tps65090_regulator*, %struct.regulator_dev*)* @tps65090_reg_set_overcurrent_wait to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tps65090_reg_set_overcurrent_wait(%struct.tps65090_regulator* %0, %struct.regulator_dev* %1) #0 {
  %3 = alloca %struct.tps65090_regulator*, align 8
  %4 = alloca %struct.regulator_dev*, align 8
  %5 = alloca i32, align 4
  store %struct.tps65090_regulator* %0, %struct.tps65090_regulator** %3, align 8
  store %struct.regulator_dev* %1, %struct.regulator_dev** %4, align 8
  %6 = load %struct.regulator_dev*, %struct.regulator_dev** %4, align 8
  %7 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.regulator_dev*, %struct.regulator_dev** %4, align 8
  %10 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @MAX_OVERCURRENT_WAIT, align 4
  %15 = load i32, i32* @CTRL_WT_BIT, align 4
  %16 = shl i32 %14, %15
  %17 = load %struct.tps65090_regulator*, %struct.tps65090_regulator** %3, align 8
  %18 = getelementptr inbounds %struct.tps65090_regulator, %struct.tps65090_regulator* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* @CTRL_WT_BIT, align 4
  %21 = shl i32 %19, %20
  %22 = call i32 @regmap_update_bits(i32 %8, i32 %13, i32 %16, i32 %21)
  store i32 %22, i32* %5, align 4
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %34

25:                                               ; preds = %2
  %26 = load %struct.regulator_dev*, %struct.regulator_dev** %4, align 8
  %27 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %26, i32 0, i32 1
  %28 = load %struct.regulator_dev*, %struct.regulator_dev** %4, align 8
  %29 = getelementptr inbounds %struct.regulator_dev, %struct.regulator_dev* %28, i32 0, i32 0
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @dev_err(i32* %27, i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %32)
  br label %34

34:                                               ; preds = %25, %2
  %35 = load i32, i32* %5, align 4
  ret i32 %35
}

declare dso_local i32 @regmap_update_bits(i32, i32, i32, i32) #1

declare dso_local i32 @dev_err(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
